added MOEA to classpath and cleaned up import warnings and such

--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="/home/forrest/.ivy2/cache/org.ow2.asm/asm-all/jars/asm-all-5.0.4.jar"/>
 	<classpathentry kind="lib" path="/home/forrest/.ivy2/cache/com.novocode/junit-interface/jars/junit-interface-0.11.jar"/>
 	<classpathentry kind="lib" path="/home/forrest/.ivy2/cache/org.scala-lang.modules/scala-parser-combinators_2.12/bundles/scala-parser-combinators_2.12-1.0.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/MOEAFramework"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
